# vad_flutter_and_rust

./: .firebaserc  LICENSE  README.md  firebase.json  flutter_launcher_icons.yaml  flutter_rust_bridge.yaml  pubspec.yaml  test_instantiate.dart  test_type.dart
.firebase/: hosting.YnVpbGQvd2Vi.cache
.github/workflows/: deploy.yml
android/: gradle.properties
integration_test/: simple_test.dart
lib/: main.dart
linux/: CMakeLists.txt
rust/: ARCHITECTURE.md  ARCHITECTURE_DESIGN.md  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_INDEX.md  ARCHITECTURE_SUMMARY.md  Cargo.toml  IMPLEMENTATION_GUIDE.md  RUNTIME_SWITCHING_GUIDE.md
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: audio_processor.rs  mod.rs  simple.rs  util.rs
rust/src/api/communicator/: communicator.rs  mod.rs  stream_sink_communicator.rs
rust/src/api/core/: engine.rs
rust/src/api/decoder/: symphonia_decoder.rs
rust/src/api/events/: cache_events.rs  communicator_events.rs  mod.rs
rust/src/api/sampling/: equal_step.rs  minmax.rs  mod.rs
rust/src/api/storage/: kv_audio_storage.rs  kv_cached_chart_storage.rs  mod.rs
rust/src/api/traits/: audio_decoder.rs  audio_storage.rs  cached_chart_storage.rs  communicator.rs  down_sample.rs  mod.rs  transform.rs
rust/src/api/transform/: energy.rs  fft.rs  mod.rs  zero_crossing_rate.rs
rust/src/api/types/: audio.rs  chart.rs  config.rs  error.rs  events.rs  file.rs  mod.rs
rust/src/api/util/: format_getter.rs  get_min_max.rs  mod.rs
rust_builder/: pubspec.yaml
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+79 files in other folders)
