[package]
name = "rust_lib_vad"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
num-complex = "0.4.6"
rayon = "1.11.0"
rustfft = "6.4.1"
symphonia = { version = "0.5.5", features = ["all"] }
dashmap = "6.1.0"
log = "0.4.29"
thiserror = "2.0.17"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
